# keycloak-ldap-server

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  example-config.toml  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
e2e-test/: compose.yml  ldap-server-config-ldap.toml  ldap-server-config-ldaps.toml
e2e-test/keycloak_realm_config/: giz_oidc.json
ldap-lib/: Cargo.toml
ldap-lib/src/: cache.rs  config.rs  entry.rs  interface.rs  keycloak_service_account.rs  lib.rs  proto.rs  server.rs  test_util.rs  tls.rs
ldap-lib/src/caching/: cache.rs  configuration.rs  mod.rs  registry.rs
ldap-lib/src/dto/: builder.rs  entry.rs
ldap-lib/src/entry/: builder.rs  entry.rs  mod.rs
nextcloud-ldap/: Cargo.toml  README.md
nextcloud-ldap/src/: main.rs
printer-ldap/: Cargo.toml
printer-ldap/src/: main.rs
roundcube-ldap/: Cargo.toml  README.md  example-config.toml
roundcube-ldap/src/: main.rs
src/: keycloak_service_account.rs  ldap.rs  main.rs  proto.rs  search.rs  tls.rs
